# agentcache

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: agent_team.py  basic_chat.py  cache_comparison.py  compaction_demo.py  deep_research.py  interactive_research.ipynb  side_question.py  smoke_test.py  smoke_test_both.py  smoke_test_cache.py  task_dag.py
examples/agentcache-research-skill/: SKILL.md
examples/agentcache-research-skill/scripts/: run_research.py
src/agentcache/: __init__.py
src/agentcache/cache/: __init__.py  cache_safe_params.py  compatibility.py  explain.py  hashes.py  prompt_state.py  tracker.py
src/agentcache/cli/: app.py  cache.py  compact.py
src/agentcache/compact/: __init__.py  microcompact.py  policy.py  tool_budget.py
src/agentcache/coord/: __init__.py  coordinator.py  summarizer.py  worker.py
src/agentcache/core/: __init__.py  errors.py  ids.py  messages.py  session.py  tools.py  usage.py
src/agentcache/dag/: __init__.py  scheduler.py  task.py
src/agentcache/fork/: __init__.py  context.py  policies.py  result.py  runner.py
src/agentcache/memory/: __init__.py  extractor.py  models.py  session_store.py
src/agentcache/memory/backends/: file.py
src/agentcache/providers/: __init__.py  adapters.py  base.py  litellm_sdk.py
src/agentcache/team/: __init__.py  config.py  runner.py
src/agentcache/telemetry/: __init__.py  events.py  metrics.py
tests/: conftest.py  test_cache_breaks.py  test_cache_safe_params.py  test_dag_runner.py  test_fork_runner.py  test_microcompact.py  test_task_dag.py  test_team.py  test_tool_executor.py
