[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcache"
version = "0.1.0"
description = "Cache-aware orchestration for LLM agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "agentcache contributors" }]
keywords = ["llm", "agents", "cache", "orchestration", "prompt-cache"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "litellm==1.83.0",
    "pydantic>=2.8",
    "anyio>=4.4",
    "tenacity>=9",
    "orjson>=3.10",
    "typing_extensions>=4.12",
]

[project.optional-dependencies]
cli = ["typer>=0.12", "rich>=14"]
sqlite = ["sqlite-utils>=3.38"]
telemetry = ["opentelemetry-api>=1.28", "opentelemetry-sdk>=1.28"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = ["agentcache[cli,sqlite,telemetry]"]

[project.scripts]
agentcache = "agentcache.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentcache"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
